# tmux-theme-manager

./: .gitignore  Cargo.toml  README.adoc  README.md  ttm.tmux
tests/fixtures/: Dockerfile
tests/fixtures/themes/: powerline.ttm
tmux/: Cargo.toml
tmux/src/: api.rs  cli.rs  conf.rs  env.rs  error.rs  lib.rs  window_options.rs
tmux/src/plugins/: tpm.rs
ttm/: Cargo.toml
ttm/src/: error.rs  lib.rs  main.rs  theme.rs
ttm/src/theme/: file.rs  model.rs  parser.rs  window_options.rs
