[package]
name = "libtmux"
version = "0.1.0"
authors = ["Lorenzo Delgado <lorenzodelgado.dev@gmail.com>"]
edition = "2021"

[lib]
name = "tmux"

[dependencies]
anyhow = "1.0.44"
dirs = "4.0.0"
env_logger = "0.9.0"
lazy-regex = "2.2.2"
log = "0.4.14"
thiserror = "1.0.25"

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "1.0.3"
mockall = "0.10.2"
